<resources>
    <string name="app_name">Tabor</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Postai cím</string>
    <string name="organizer">Szervező</string>
    <string name="camper">Táborozó</string>
    <string name="camp_description">Tábor leírás</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Foglalás</string>
    <string name="delete">Törlés</string>

    <string-array name="camp_names">
        <item>Ausztriai sítábor</item>
        <item>Szlovák sítábor</item>
        <item>Francia sítábor</item>
        <item>Balatonakali tábor</item>
        <item>Zamardi tábor</item>
        <item>Siofok tábor</item>
        <item>Erdélyi tábor</item>
        <item>Biciklis tábor</item>
        <item>Vitorlás tábor</item>
        <item>Repülős tábor</item>
    </string-array>

    <string-array name="camp_desc">
        <item>Fedezd fel az Alpok havas csúcsait Ausztriában, és tanulj síelni profi oktatók segítségével!</item>
        <item>Élvezd a szlovák hegyek téli varázsát egy izgalmas sítáborban, kezdőknek és haladóknak is!</item>
        <item>Síelj a francia Alpok legendás pályáin, és tapasztald meg az igazi alpesi élményt!</item>
        <item>Nyári tábor Balatonakaliban, tele strandolással, játékokkal és kirándulásokkal a Balaton partján.</item>
        <item>Élménydús tábor Zamárdiban, ahol strandolás, sportversenyek és esti bulik várnak rád!</item>
        <item>Szórakozás és pihenés Siófokon – napozás, vízparti programok és felejthetetlen élmények.</item>
        <item>Fedezd fel Erdély varázslatos tájait kirándulásokkal, városnézéssel és helyi kulturális programokkal!</item>
        <item>Vágj neki két keréken a kalandnak! Biciklitúrák, természetjárás és igazi csapatélmény vár rád.</item>
        <item>Tanulj meg vitorlázni a Balatonon! Szél, hullámok és kaland egy felejthetetlen nyári táborban.</item>
        <item>Emelkedj a magasba! Ismerkedj meg a repülés alapjaival és próbáld ki a szimulátorokat is!</item>
    </string-array>


    <array name="camp_rates">
        <item>4</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>5</item>
        <item>2</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>3.5</item>
    </array>

    <array name="camp_images">
        <item>@drawable/austria</item>
        <item>@drawable/szlovak</item>
        <item>@drawable/francia</item>
        <item>@drawable/akali</item>
        <item>@drawable/zamardi</item>
        <item>@drawable/siofok</item>
        <item>@drawable/erdely</item>
        <item>@drawable/bicikli</item>
        <item>@drawable/vitorlas</item>
        <item>@drawable/repulo</item>

    </array>

    <array name="camp_price">
        <item>120000 Ft</item>
        <item>95000 Ft</item>
        <item>108000 Ft</item>
        <item>42000 Ft</item>
        <item>59900 Ft</item>
        <item>75000 Ft</item>
        <item>80000 Ft</item>
        <item>38000 Ft</item>
        <item>54000 Ft</item>
        <item>30000 Ft</item>
    </array>

</resources>